# Nadir-GUI

./: .gitignore  CMakeLists.txt  LICENSE  app.rc  main.cpp  mainwindow.cpp  mainwindow.h  materials.db  resources.qrc
include/: globals.h  material.h
src/: database.cpp  mathutil.cpp  selector.cpp
